# osdi_pthread_practice

./: CMakeLists.txt  naive_thread.c  no_thread.c  openmp.c  pi_approach.c  plot.py  report.md  result.txt  run_test.sh
